kustomize/vote/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
    tier: front
  name: vote
  namespace: instavote
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
  strategy: {}
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: schoolofdevops/vote:v2
        name: vote
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
