kustomize/vote/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
  namespace: instavote
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: vote
  type: LoadBalancer
